--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,11 @@
     "dependencies": {
         "@supabase/supabase-js": "^2.45.0",
         "axios": "^1.7.3",
+        "cheerio": "^1.0.0-rc.12",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
-        "node-cron": "^2.0.3"
+        "node-cron": "^2.0.3",
+        "puppeteer": "^22.15.0"
     },
     "author": "Michele Sifanno",
     "license": "ISC"
