--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
         "cheerio": "^1.0.0-rc.12",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "lodash": "^4.17.21",
         "node-cron": "^2.0.3",
         "puppeteer": "^22.15.0"
     },
