--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/supabase-js": "^2.45.0",
     "axios": "^1.7.3",
     "chart.js": "^4.4.3",
+    "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "node-cron": "^3.0.3",
     "react": "^18.3.1",
@@ -25,6 +26,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
+    "rss-parser": "^3.13.0",
     "three": "^0.167.1"
   },
   "devDependencies": {
