--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
+    "next": "^14.2.5",
     "node-cron": "^3.0.3",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
