--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.26.0",
     "rss-parser": "^3.13.0",
     "three": "^0.167.1"
@@ -38,6 +39,9 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "vite": "^5.3.4"
+    "vite": "^5.3.4",
+    "vite-plugin-prerender": "^1.0.8",
+    "vite-plugin-ssr": "^0.4.142",
+    "vite-plugin-ssr-ssg": "^1.4.1"
   }
 }
