--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "rollup": "^4.20.0",
     "vite": "^5.3.4",
-    "vite-plugin-prerender": "^1.0.8",
     "vite-plugin-ssr": "^0.4.142",
     "vite-plugin-ssr-ssg": "^1.4.1"
   }
