--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
         "express": "^4.19.2",
         "lodash": "^4.17.21",
         "node-cron": "^2.0.3",
+        "node-fetch": "^3.3.2",
         "puppeteer": "^22.15.0"
     },
     "author": "Michele Sifanno",
