--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "@mui/x-charts": "^7.13.0",
+    "@mui/x-data-grid": "^7.13.0",
     "@supabase/supabase-js": "^2.45.0",
     "axios": "^1.7.3",
     "chart.js": "^4.4.3",
