--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http-proxy-middleware": "^3.0.0",
     "next": "^14.2.5",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
