--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,20 @@
 {
     "rewrites": [
       { "source": "/(.*)", "destination": "/" }
+    ],
+    "version": 2,
+    "builds": [
+      { "src": "package.json", "use": "@vercel/node" }
+    ],
+    "routes": [
+      {
+        "src": "/api/(.*)",
+        "dest": "/api/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/index.html"
+      }
     ]
   }
-  
+   
