--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,19 @@
     "rewrites": [
       { "source": "/(.*)", "destination": "/" }
     ],
-    "version": 2,
-    "builds": [
-      { "src": "package.json", "use": "@vercel/node" }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/api/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/index.html"
-      }
-    ]
-  }
+      "version": 2,
+      "builds": [
+        { "src": "package.json", "use": "@vercel/node" }
+      ],
+      "routes": [
+        {
+          "src": "/api/(.*)",
+          "dest": "/api/proxy.js?path=$1"
+        },
+        {
+          "src": "/(.*)",
+          "dest": "/index.html"
+        }
+      ]
+    }
    
