--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fotmob": "^2.4.1",
     "http-proxy-middleware": "^3.0.0",
     "next": "^14.2.5",
     "node-cron": "^3.0.3",
