--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
         {
           "src": "api/**/*.js",
           "use": "@vercel/node"
+        },
+        {
+          "src": "src/**/*",
+          "use": "@vercel/static"
         }
       ],
       "routes": [
@@ -19,5 +23,5 @@
           "dest": "/index.html"
         }
       ]
-    }
+    }    
    
