--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.26.0",
+    "recharts": "^2.12.7",
     "rss-parser": "^3.13.0",
     "three": "^0.167.1"
   },
