--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "^14.2.5",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
+    "node-vibrant": "^3.2.1-alpha.1",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
