--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "next": "^14.2.5",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
-    "node-vibrant": "^3.2.1-alpha.1",
+    "node-vibrant": "^3.1.6",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
@@ -35,6 +35,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.26.0",
+    "react-world-flags": "^1.6.0",
     "recharts": "^2.12.7",
     "rss-parser": "^3.13.0",
     "three": "^0.167.1"
@@ -48,7 +49,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "rollup": "^4.20.0",
-    "vite": "^5.3.4",
+    "vite": "^5.4.3",
     "vite-plugin-ssr": "^0.4.142",
     "vite-plugin-ssr-ssg": "^1.4.1"
   }
