--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-data-grid": "^7.13.0",
     "@supabase/supabase-js": "^2.45.0",
     "axios": "^1.7.3",
+    "canvas": "^2.11.2",
     "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
